--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
-os: linux
+sudo: required
+dist: trusty
 
+addons:
+  apt:
+    packages:
+    - cmake
+    - time
+    
 jobs:
   include:
     - script: echo "Running unit tests (1)"
